# router-flood

./: .gitignore  API_DOCUMENTATION.md  ARCHITECTURE.md  BENCHMARKS.md  BENCHMARK_GUIDE.md  BENCHMARK_RESULTS.md  BUFFER_POOL_ANALYSIS.md  BUFFER_POOL_INTEGRATION.md  CARGO_TEST_FIX_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CLEANUP_COMPLETION_STATUS.md  CLEANUP_SUMMARY.md  CODEBASE_ANALYSIS_AUGUST_2025.md  CODEBASE_CLEANUP_SUMMARY.md  COMPREHENSIVE_ANALYSIS_REPORT.md  CONTRIBUTING.md  CORE_LOGIC_VULNERABILITY_ANALYSIS.md  Cargo.toml  DEAD_CODE_ANALYSIS.md  DEPLOYMENT_GUIDE.md  DEVELOPER_GUIDE.md  DEVELOPMENT.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_UPDATE_SUMMARY.md  DUPLICATE_FUNCTIONALITY_CONSOLIDATION_PLAN.md  FIXES_SUMMARY.md  FUZZING_GUIDE.md  HANG_ANALYSIS_CONCLUSION.md  HANG_CONDITION_FIX.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  IMPROVEMENT_ROADMAP.md  INTEGRATION_COMPLETE.md  LATEST_UPDATES.md  LICENSE  MEMORY_MANAGEMENT_REVIEW.md  MEMORY_POOL_TEST_FIX.md  NAMING_REFACTORING_PLAN.md  NAMING_REFACTOR_SUMMARY.md  (+48 more)
.cargo/: config.toml
.github/workflows/: README.md  benchmark.yml  release.yml  test.yml
benches/: abstractions.rs  buffer_pool.rs  config_validation.rs  export.rs  lockfree_stats.rs  memory_pool.rs  packet_building.rs  packet_generation.rs  packet_strategies.rs  protocol_selection.rs  raii_guards.rs  rate_limiting.rs  rng.rs  simd.rs  stats_collection.rs  throughput.rs  transport.rs  validation.rs  worker_comparison.rs  worker_coordination.rs
docs/architecture/: extensibility-patterns.md  interface-segregation.md
examples/: advanced_usage.rs  basic_usage.rs  config_usage.rs  integration_demo.rs  interactive_cli.rs  monitoring.rs  monitoring_security_usage.rs  new_architecture_demo.rs  stress_testing.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_cli_parser.rs  fuzz_config_parser.rs  fuzz_packet_builder.rs
src/: advanced_features.rs  buffer_pool.rs  cli_runner.rs  config_original.rs  constants.rs  error.rs  extensibility_tests.rs  extensibility_tests_simple.rs  lib.rs  main.rs  monitoring_security.rs  packet.rs  packet.rs.backup  phase4.rs  phase5.rs  raii.rs  rng.rs  security_runner.rs  simulation.rs  simulation_raii.rs  stats_original.rs  terminal.rs  transport_original.rs  user_experience.rs  validation.rs  worker.rs
src/abstractions/: mod.rs  network.rs  system.rs
src/adapters/: channel_adapter.rs  mod.rs  stats_adapter.rs
src/cli/: basic.rs  cli.rs  commands.rs  enhanced.rs  guided.rs  interactive.rs  mod.rs  parser.rs  prompts.rs  simplified.rs
src/config/: application.rs  builder.rs  compatibility.rs  mod.rs  preset.rs  schema.rs  simplified.rs  trait_impls.rs  traits.rs  usage_examples.rs  validation.rs
tests/: abstraction_tests.rs  abstractions_tests.rs  ansi_display_tests.rs  audit_tests.rs  buffer_pool_integration_tests.rs  buffer_pool_unit_tests.rs  cli_enhanced_unit_tests.rs  cli_interactive_unit_tests.rs  config_builder_unit_tests.rs  config_loading.rs  config_preset_tests.rs  config_schema_unit_tests.rs  config_simplified_tests.rs  config_tests.rs  core_tests.rs  edge_case_tests.rs  error_handling_tests.rs  error_tests.rs  error_user_friendly_unit_tests.rs  extensibility_tests.rs  fuzz_tests.rs  graceful_shutdown.rs  integration_core_features.rs  integration_new_architecture.rs  integration_tests.rs  lockfree_stats_tests.rs  main_tests.rs  monitor_tests.rs  monitoring_alerts_unit_tests.rs  monitoring_dashboard_unit_tests.rs  monitoring_export_unit_tests.rs  monitoring_metrics_unit_tests.rs  monitoring_prometheus_unit_tests.rs  monitoring_security_integration_tests.rs.disabled  network_tests.rs  new_architecture_tests.rs  packet_fuzzing_alternative.rs  packet_tests.rs  packet_workflow.rs  performance_buffer_pool_unit_tests.rs  (+26 more)
(+126 files in other folders)
