[package]
name = "router-flood"
version = "0.0.1"
edition = "2024"
description = "Educational DDoS simulation tool for local network stress testing"
license = "MIT"
keywords = ["packet-generator", "network-testing", "stress-testing", "load-testing", "performance"]
categories = ["network-programming", "testing", "command-line-utilities"]

[dependencies]
pnet = "0.35.0"
rand = "0.8.5"
clap = { version = "4.5.4", features = ["derive"] }
tokio = { version = "1.47", features = ["full", "signal"] }
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"
sysinfo = "0.32"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
num_cpus = "1.16"
regex = "1.10"
termios = "0.3"

[features]
default = []

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.6"

[[bench]]
name = "packet_generation"
harness = false

[[bench]]
name = "stats_collection"
harness = false

[[bench]]
name = "memory_pool"
harness = false

[[bench]]
name = "throughput"
harness = false

